--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "My Remotion video",
   "scripts": {
     "start": "remotion preview src/index.tsx",
-    "build": "remotion render src/index.tsx HelloWorld out/video.mp4",
+    "build": "remotion render src/index.tsx CryptoCurrency out/video.mp4",
     "upgrade": "remotion upgrade",
     "test": "eslint src --ext ts,tsx,js,jsx && tsc"
   },
@@ -18,10 +18,12 @@
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "remotion": "^3.0.0",
+    "styled-components": "^5.3.5",
     "typescript": "^4.6.3"
   },
   "devDependencies": {
     "@types/react": "^18.0.6",
-    "@types/web": "^0.0.61"
+    "@types/web": "^0.0.61",
+    "@types/styled-components": "^5.1.25"
   }
 }
