--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
-  "name": "CryptocurrencyPrices",
+  "name": "Cryptocurrency",
   "version": "1.0.0",
   "description": "My Remotion video",
+  "type": "module",
   "scripts": {
     "start": "remotion preview src/index.tsx",
-    "build": "remotion render src/index.tsx CryptoCurrency out/video.mp4",
+    "build": "remotion render src/index.tsx Cryptocurrency out/video.mp4",
     "upgrade": "remotion upgrade",
     "test": "eslint src --ext ts,tsx,js,jsx && tsc"
   },
@@ -13,7 +14,11 @@
   "dependencies": {
     "@remotion/cli": "^3.0.0",
     "@remotion/eslint-config": "^3.0.0",
+    "config": "^3.3.7",
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.1",
     "eslint": "^8.14.0",
+    "node-fetch": "^3.2.10",
     "prettier": "^2.2.1",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
@@ -23,7 +28,7 @@
   },
   "devDependencies": {
     "@types/react": "^18.0.6",
-    "@types/web": "^0.0.61",
-    "@types/styled-components": "^5.1.25"
+    "@types/styled-components": "^5.1.25",
+    "@types/web": "^0.0.61"
   }
 }
