--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "eslint": "^8.14.0",
+    "express": "^4.18.1",
     "node-fetch": "^3.2.10",
     "prettier": "^2.2.1",
     "react": "^18.0.0",
