--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Cryptocurrency",
+  "name": "cryptocurrency",
   "version": "1.0.0",
   "description": "My Remotion video",
   "type": "module",
