--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -5,9 +5,9 @@ jobs:
   lanuchServ:
     name: node
     runs-on: ubuntu-latest
+    container: node:16
     steps:
-      - uses: actions/checkout@main
-      - uses: actions/setup-node@main
+      - uses: actions/checkout@v3
       - run: npm i
       - name: create env file
         run: |
